# astraria-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  simple_shared.wesl
.github/workflows/: pages.yml
assets/examples/: Solar_System_2K.txt
src/: app.rs  assets.rs  generated_shaders.rs  graphics.rs  input.rs  lib.rs  main.rs  physics.rs  scenario.rs  ui.rs
src/graphics/: mesh.rs  test_geometry.rs  vertex.rs
src/math/: body.rs  mod.rs  units.rs
src/renderer/: buffers.rs  camera.rs  core.rs  cpu_occlusion.rs  lighting.rs  main_renderer.rs  mod.rs  occlusion.rs  orbital_paths.rs  pipeline.rs  precision_math.rs  shader_utils.rs
src/renderer/shaders/: billboard_shader.rs  black_hole_shader.rs  default_shader.rs  lens_glow_shader.rs  line_shader.rs  mod.rs  occlusion_proxy_shader.rs  planet_atmo_shader.rs  point_shader.rs  skybox_shader.rs  sun_shader.rs
src/renderer/uniforms/: mod.rs  shared.wgsl
src/shaders/: billboard.wesl  billboard.wgsl  black_hole.wesl  black_hole.wgsl  default.wesl  default.wgsl  default_simple.wgsl  lens_glow.wesl  lens_glow.wgsl  line.wesl  line.wgsl  occlusion_proxy.wesl  offscreen_test.wgsl  orbital_paths.wesl  planet_atmo.wesl  planet_atmo.wgsl  point.wesl  point.wgsl  shared.wesl  skybox.wesl  skybox.wgsl  sun_shader.wesl  sun_shader.wgsl
src/shaders/shared/: uniforms.wgsl
web/: index.html
