[package]
name = "astraria-rust"
version = "0.1.0"
edition = "2021"
authors = ["Astraria Rust Port"]
description = "3D Orbital Mechanics Simulator - Rust port of Astraria"
license = "MIT"

[dependencies]
# Graphics and windowing
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"

# Math
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Asset loading
image = { version = "0.24", features = ["png", "jpeg"], default-features = false }
tobj = "4.0"

# UI
egui = "0.23"
egui-winit = "0.23"
egui-wgpu = "0.23"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Async/threading
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[lib]
name = "astraria_rust"
path = "src/lib.rs"

[[bin]]
name = "astraria"
path = "src/main.rs"

# Performance optimization profiles
[profile.dev]
# Optimize dependencies even in debug builds for faster image loading
opt-level = 1
overflow-checks = true

[profile.dev.package.image]
# Specifically optimize the image library in debug builds
opt-level = 3

[profile.dev.package.wgpu]
# Optimize wgpu for better GPU performance in debug
opt-level = 2

[profile.release]
# Maximum optimization for release builds
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.image]
# Full optimization for image processing in release
opt-level = 3

# Fast compilation profile for development
[profile.dev-fast]
inherits = "dev"
opt-level = 0
incremental = true
