[package]
name = "astraria-rust"
version = "0.1.0"
edition = "2024"
authors = ["Astraria Rust Port"]
description = "3D Orbital Mechanics Simulator - Rust port of Astraria"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["native"]
native = ["dep:pollster", "dep:env_logger", "dep:tobj"]
web = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys", "dep:console_log", "dep:console_error_panic_hook", "wgpu/webgl", "dep:getrandom"]

[dependencies]
# Graphics and windowing
wgpu = "27.0"
winit = "0.30"

# Math
glam = { version = "0.32", features = ["bytemuck", "mint"] }
bytemuck = { version = "1.25", features = ["derive"] }

# Asset loading
image = { version = "0.25.9", features = ["png", "jpeg"], default-features = false }

# UI
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
egui-winit = { version = "0.33", default-features = false, features = ["links"] }
egui-wgpu = "0.33"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"

# Async/threading
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

# Shader processing
wgsl_to_wgpu = "0.16"

# Native-only dependencies
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
tobj = { version = "4.0", optional = true }

# Web-only dependencies
wasm-bindgen = { version = "=0.2.106", optional = true }
wasm-bindgen-futures = { version = "=0.4.56", optional = true }
console_log = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "=0.3.83", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Response",
    "Headers",
    "RequestInit",
    "Request",
    "RequestMode",
    "Performance",
] }
js-sys = { version = "=0.3.83", optional = true }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }

[build-dependencies]
wgsl_to_wgpu = "0.16"
wesl = "0.3"
termcolor = "1.4"

[lib]
name = "astraria_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "astraria"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "all_shaders_test"
path = "src/bin/all_shaders_test.rs"
required-features = ["native"]

[[bin]]
name = "debug_sizes"
path = "src/bin/debug_sizes.rs"
required-features = ["native"]

# Performance optimization profiles
[profile.dev]
# Optimize dependencies even in debug builds for faster image loading
opt-level = 1
overflow-checks = true

[profile.dev.package.image]
# Specifically optimize the image library in debug builds
opt-level = 3

[profile.dev.package.wgpu]
# Optimize wgpu for better GPU performance in debug
opt-level = 2

[profile.release]
# Maximum optimization for release builds
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.image]
# Full optimization for image processing in release
opt-level = 3

# Fast compilation profile for development
[profile.dev-fast]
inherits = "dev"
opt-level = 0
incremental = true
